prepare 3.4 branch builds; update to beta5, readd oooblogger extension
git-svn-id: file:///srv/repos/svn-packages/svn@123693 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -12,7 +12,7 @@ pkgname=('libreoffice' 'libreoffice-sdk'
 	'libreoffice-extension-nlpsolver'
 	'libreoffice-extension-ct2n'
 	'libreoffice-extension-numbertext'	
-	#'libreoffice-extension-oooblogger' # no source integration
+	'libreoffice-extension-oooblogger'
 	'libreoffice-extension-pdfimport'
 	'libreoffice-extension-presenter-screen'
 	'libreoffice-extension-presentation-minimizer'
@@ -24,9 +24,9 @@ pkgname=('libreoffice' 'libreoffice-sdk'
 	'libreoffice-extension-validator'
 	'libreoffice-extension-watch-window'
 	'libreoffice-extension-wiki-publisher')
-_LOver=3.3.99.4
-pkgver=3.4beta4
-pkgrel=4
+_LOver=3.3.99.5
+pkgver=3.4beta5
+pkgrel=1
 arch=('i686' 'x86_64')
 #_LO_tree="3.4"
 _OFFICEUPD="300"
@@ -47,9 +47,8 @@ makedepends=( # makedepends
 	     # translate-toolkit - todo move them to extra to allow --with-system-foo builds
 # http://download.documentfoundation.org/mirrors/all.html
 # http://wiki.documentfoundation.org/Mirrors
-_mirror="http://download.documentfoundation.org/libreoffice/src"
-#_mirror="ftp://ftp.uni-muenster.de/pub/software/tdf/libreoffice/src"
-#_mirror="ftp://ftp.astral.ro/mirrors/tdf/libreoffice/src"
+#_mirror="http://download.documentfoundation.org/libreoffice/src"
+_mirror="http://dev-builds.libreoffice.org/pre-releases/src/"
 _additional_source_url="http://hg.services.openoffice.org/binaries"
 source=(${_mirror}/${pkgbase}-{artwork,base,bootstrap,calc,components,extensions,extras,filters,help,impress,libs-core,libs-extern,libs-extern-sys,libs-gui,postprocess,sdk,testing,ure,writer}-${_LOver}.tar.bz2 #,translations
 	${_additional_source_url}/1f24ab1d39f4a51faf22244c94a6203f-xmlsec1-1.2.14.tar.gz
@@ -90,6 +89,7 @@ source=(${_mirror}/${pkgbase}-{artwork,base,bootstrap,calc,components,extensions
 	http://ooo.itc.hu/oxygenoffice/download/libreoffice/b632bdd25649cc4067bcb410bae23d2b-hunart_0.3.oxt
 	http://ooo.itc.hu/oxygenoffice/download/libreoffice/9d60b6cfa3ef1926848710bbcd11115b-typo_0.4.2.oxt
 	http://ooo.itc.hu/oxygenoffice/download/libreoffice/dbaafd21de055e582d92d7d32fe9da13-gdocs_2.3.1.oxt
+	http://ooo.itc.hu/oxygenoffice/download/libreoffice/b7b2d0e04e142f26dd96119c80757d1f-oooblogger_0.1.oxt
 	buildfix_i116795.diff
 	buildfix_boost.diff
 	buildfix_ct2n.diff)
@@ -128,27 +128,28 @@ noextract=(185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	b632bdd25649cc4067bcb410bae23d2b-hunart_0.3.oxt
 	9d60b6cfa3ef1926848710bbcd11115b-typo_0.4.2.oxt
 	dbaafd21de055e582d92d7d32fe9da13-gdocs_2.3.1.oxt
+	b7b2d0e04e142f26dd96119c80757d1f-oooblogger_0.1.oxt
 	90401bca927835b6fbae4a707ed187c8-nlpsolver-0.9.tar.bz2
 	f02578f5218f217a9f20e9c30e119c6a-boost_1_44_0.tar.bz2)
-md5sums=('0b13a4c15ce0c447ebf141c29343d4f6'
-         'ac21e7de6c16a3037c30cf0058ce1ee0'
-         'bdeb2f96ab0fe5cac37f859c0d3cdff6'
-         '661b7a288052d26b9bf40ed5030071aa'
-         '295f320e423b62b12ab89a2132e766e6'
-         '134102097803efc07d3a6bec536af14a'
-         'fe3c6d76e6aeb07ee99692d684f3d8a9'
-         '130291ff105496b63457cd8ec2d691c7'
-         'b32259299af1f21fbaf8929df6294a89'
-         '6fac8f5663977dcd542f6dba238adc97'
-         '729bbef35ed5de9c024bdf6e5a7cb606'
-         'f017689e83495abbf0616dca9e63a27a'
-         '349dbf7e9761a45556dae382769c0e29'
-         '7baba6423c6d23ec63a9bdf9f277d43a'
-         'a02f988c0ad2d99a15084d2da030f7e2'
-         '09f8fdccdb1ea06f0ec012a60b6c55f5'
-         '458d7e4bb7c72a7c54527ccbb412ab72'
-         '1365ec1b5b8b0e55db798cc8713b381c'
-         '1c7c0c03fcfd632dfb3d3a861f5931a3'
+md5sums=('67a63b314b4e854ebcc4ced96ff4372c'
+         '46ecfd42087a7282c42a38136da7fdb4'
+         '7d8291ab2cce155922981601512aec37'
+         '9214906760e11487d63caed53011c0da'
+         'cb6be91516d2927bd22631704de7d7f2'
+         'a6e5cb653bb3162d9f2d2406a0db4490'
+         '82c83db58bd3115ce1cb42545df2b587'
+         'dd62d5bc2a547ce250aaaeebccc3bdde'
+         '845b8a2e395933cfb84eff59a0e9dade'
+         '8f1c7c8d95c289f38688bc36d05573e6'
+         'bbbecdae03c4b49d729c4f28c6387198'
+         '7286442d13b228b488c8dd5defd049c6'
+         'db56c88014081942f8e03e8719f4cbc2'
+         '52a41525c4470c14088a1bed986b40ae'
+         '66c096a5878c18849a80c6584aed0c74'
+         '1ff273abaf0afef0606710bae215a053'
+         'ef7d69261aaf4ee6ccd6762a2eb8afb5'
+         '90cdcf637dbf945c5fc15cb25678ac77'
+         '7b7cbd530eccd2b0da009a250d09f84f'
          '1f24ab1d39f4a51faf22244c94a6203f'
          '35c94d2df8893241173de1d16b6034c0'
          '798b2ffdc8bcfe7bca2cf92b62caf685'
@@ -187,6 +188,7 @@ md5sums=('0b13a4c15ce0c447ebf141c29343d4f6'
          'b632bdd25649cc4067bcb410bae23d2b'
          '9d60b6cfa3ef1926848710bbcd11115b'
          'dbaafd21de055e582d92d7d32fe9da13'
+         'b7b2d0e04e142f26dd96119c80757d1f'
          '0520d63c946e272ed3bdfc863fbdc42e'
          'bc228237108cab7745897a9f466b6d39'
          'eee273f501ff45dc5f1365e78c6d57c0')
@@ -271,7 +273,7 @@ build() {
 		--enable-ext-nlpsolver \
 		--enable-ext-ct2n \
 		--enable-ext-numbertext \
-		--disable-ext-oooblogger \
+		--enable-ext-oooblogger \
 		--enable-ext-pdfimport \
 		--enable-ext-presenter-console \
 		--enable-ext-presenter-minimizer \
@@ -555,16 +557,16 @@ package_libreoffice-extension-numbertext() {
 	unzip -q ${srcdir}/b8cbca7b3363e6ca2d02bc0ba2b63904-numbertext_0.9.4.oxt -d ${pkgdir}/usr/lib/libreoffice/share/extensions/numbertext
 }
 
-#package_libreoffice-extension-oooblogger() {
+package_libreoffice-extension-oooblogger() {
 
-# pkgdesc="An extensions for blogging"
+ pkgdesc="An extensions for blogging"
  #arch=('any')
-# depends=('libreoffice')
-# groups=('libreoffice-extensions')
+ depends=('libreoffice' 'coreutils')
+ groups=('libreoffice-extensions')
 
-#	install -dm755 ${pkgdir}/usr/lib/libreoffice/share/extensions
-#	unzip -q ${srcdir}/${pkgbase}-build-${_LOver}/build/libreoffice-${_LOver}/solver/${_OFFICEUPD}/unxlng*/bin/oooblogger.oxt -d ${pkgdir}/usr/lib/libreoffice/share/extensions/oooblogger
-#}
+	install -dm755 ${pkgdir}/usr/lib/libreoffice/share/extensions
+	unzip -q ${srcdir}/b7b2d0e04e142f26dd96119c80757d1f-oooblogger_0.1.oxt -d ${pkgdir}/usr/lib/libreoffice/share/extensions/oooblogger
+}
 
 package_libreoffice-extension-pdfimport() {
 
