--- a/qt3/trunk/PKGBUILD
+++ b/qt3/trunk/PKGBUILD
@@ -1,22 +1,27 @@
 # $Id$
-# Maintainer: Tobias Powalowski <tpowa@archlinux.org>
+# Maintainer:
+# Contributor: Tobias Powalowski <tpowa@archlinux.org>
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=qt3
 pkgver=3.3.8
-pkgrel=19
-pkgdesc="The QT gui toolkit."
-arch=(i686 x86_64)
+pkgrel=20
+pkgdesc="The QT3 gui toolkit"
+arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.trolltech.com/products/qt/index.html"
 pkgfqn=qt-x11-free-${pkgver}
 install=qt.install
-depends=('libpng>=1.4.0' 'libxmu' 'libxcursor' 'libxinerama' 'mesa' \
-	 'libxft' 'libxrandr' 'libmng>=1.0.10-3')
-makedepends=('mysql' 'postgresql>=8.2.3' 'unixodbc' 'sqlite3')
+depends=('libpng' 'libxmu' 'libxcursor' 'libxinerama' 'mesa' 'libxft'
+         'libxrandr' 'libmng')
+makedepends=('mysql' 'postgresql' 'unixodbc' 'sqlite3')
 optdepends=('libmysqlclient' 'postgresql-libs' 'unixodbc')
-source=(ftp://ftp.trolltech.com/qt/source/${pkgfqn}.tar.bz2 qt3-png14.patch qt.profile \
-        qt-copy-kde-patches.tar.bz2 qt-patches.tar.bz2 utf8-bug-qt3.diff \
+source=("ftp://ftp.trolltech.com/qt/source/${pkgfqn}.tar.bz2"
+        qt3-png14.patch
+        qt.profile
+        qt-copy-kde-patches.tar.bz2
+        qt-patches.tar.bz2
+        utf8-bug-qt3.diff
 	    qt-font-default-subst.diff
         mysql.patch
         eastern_asian_languagues.diff
@@ -40,11 +45,11 @@ md5sums=('cf3c43a7dfde5bfb76f8001102fe6e85'
 
 build() {
   unset QMAKESPEC
-  export QTDIR=${srcdir}/$pkgfqn
+  export QTDIR="${srcdir}"/$pkgfqn
   export PATH=${QTDIR}/bin:${PATH}
   export LD_LIBRARY_PATH=${QTDIR}/lib:${LD_LIBRARY_PATH}
   export QMAKESPEC=$QTDIR/mkspecs/linux-g++
-  cd ${srcdir}/$pkgfqn
+  cd "${srcdir}"/$pkgfqn
   # apply qt patches from kde.org
   for i in ../qt-copy-kde-patches/*; do
     patch -Np0 -i $i 
@@ -54,19 +59,19 @@ build() {
     patch -Np1 -i $i 
   done
   # fix utf8 bug
-  patch -Np0 -i ../utf8-bug-qt3.diff 
+  patch -p0 -i "${srcdir}"/utf8-bug-qt3.diff 
   # fix asia fonts
-  patch -Np0 -i ../qt-font-default-subst.diff 
+  patch -p0 -i "${srcdir}"/qt-font-default-subst.diff 
   # fix segfaults on exit when using mysql DB driver
-  patch -Np0 -i ../mysql.patch 
+  patch -p0 -i "${srcdir}"/mysql.patch 
   # fix CJK font/chars select error (FS#11245)
-  patch -p1 -i ${srcdir}/eastern_asian_languagues.diff 
+  patch -p1 -i "${srcdir}"/eastern_asian_languagues.diff 
   # fix build problem against new unixODBC
-  patch -p1 -i ${srcdir}/qt-odbc.patch 
+  patch -p1 -i "${srcdir}"/qt-odbc.patch 
   # fix build with gcc 4.6.0
-  patch -p1 -i ${srcdir}/gcc-4.6.patch
+  patch -p1 -i "${srcdir}"/gcc-4.6.patch
 
-  patch -p0 -i ${srcdir}/qt3-png14.patch 
+  patch -p0 -i "${srcdir}"/qt3-png14.patch 
   # start compiling qt
   sed -i 's|-cp -P -f|-cp -L -f|' qmake/Makefile.unix
   rm -rf doc/html examples tutorial
@@ -85,45 +90,54 @@ build() {
     else unset ARCH
   fi
 
-  ./configure -prefix /opt/qt -platform linux-g++$ARCH \
-    -system-zlib -qt-gif -release -shared -sm -nis -thread -stl \
+  ./configure -prefix /opt/qt \
+    -platform linux-g++$ARCH \
+    -system-zlib \
+    -qt-gif \
+    -release \
+    -shared \
+    -sm \
+    -nis \
+    -thread \
+    -stl \
     -system-lib{png,jpeg,mng} \
-    -no-g++-exceptions -plugin-sql-{mysql,psql,sqlite,odbc}
+    -no-g++-exceptions \
+    -plugin-sql-{mysql,psql,sqlite,odbc}
 
   # fix /opt/qt/lib path
-  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" ${srcdir}/$pkgfqn/src/Makefile
-  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" ${srcdir}/$pkgfqn/tools/designer/designer/Makefile
-  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" ${srcdir}/$pkgfqn/tools/designer/editor/Makefile
-  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" ${srcdir}/$pkgfqn/tools/assistant/lib/Makefile
-  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" ${srcdir}/$pkgfqn/tools/designer/uilib/Makefile
+  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" "${srcdir}"/$pkgfqn/src/Makefile
+  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" "${srcdir}"/$pkgfqn/tools/designer/designer/Makefile
+  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" "${srcdir}"/$pkgfqn/tools/designer/editor/Makefile
+  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" "${srcdir}"/$pkgfqn/tools/assistant/lib/Makefile
+  [ "$CARCH" = "x86_64" ] && sed -i "s|/opt/qt/lib64|/opt/qt/lib|g" "${srcdir}"/$pkgfqn/tools/designer/uilib/Makefile
 
-  cd ${srcdir}/$pkgfqn
+  cd "${srcdir}"/$pkgfqn
   make -C qmake 
-  cd ${srcdir}/$pkgfqn/plugins/src/sqldrivers/mysql
-  ${srcdir}/$pkgfqn/bin/qmake -o Makefile "INCPATH+=/usr/include/mysql" "LIBS+=-L/usr/lib/mysql -lmysqlclient" mysql.pro
-  cd ${srcdir}/$pkgfqn/plugins/src/sqldrivers/psql
-  ${srcdir}/$pkgfqn/bin/qmake -o Makefile "INCPATH+=/usr/src/include /usr/include/postgresql/server" "LIBS+=-L/usr/lib -lpq" psql.pro
+  cd "${srcdir}"/$pkgfqn/plugins/src/sqldrivers/mysql
+  "${srcdir}"/$pkgfqn/bin/qmake -o Makefile "INCPATH+=/usr/include/mysql" "LIBS+=-L/usr/lib/mysql -lmysqlclient" mysql.pro
+  cd "${srcdir}"/$pkgfqn/plugins/src/sqldrivers/psql
+  "${srcdir}"/$pkgfqn/bin/qmake -o Makefile "INCPATH+=/usr/src/include /usr/include/postgresql/server" "LIBS+=-L/usr/lib -lpq" psql.pro
 
-  cd ${srcdir}/$pkgfqn
+  cd "${srcdir}"/$pkgfqn
   # fix the broken makefiles
   #sed -i 's|[[:space:]]*strip.*doc/html.*$|#|g' src/Makefile
   make
 }
 
 package() {
-  cd ${srcdir}/$pkgfqn
-  make INSTALL_ROOT=${pkgdir} install
-  rm -rf ${pkgdir}/opt/qt/{phrasebooks,templates,translations}
-  sed -i "s|-L${srcdir}/$pkgfqn/lib ||g" ${pkgdir}/opt/qt/lib/*.prl
-  install -D -m755 qmake/qmake ${pkgdir}/opt/qt/bin/qmake
-  install -D -m755 ${srcdir}/qt.profile ${pkgdir}/etc/profile.d/qt3.sh
-  ln -sf /opt/qt/bin/qtconfig ${pkgdir}/opt/qt/bin/qt3config 
-  rm -f ${pkgdir}/opt/qt/mkspecs/linux-g++$ARCH/linux-g++$ARCH
+  cd "${srcdir}"/$pkgfqn
+  make INSTALL_ROOT="${pkgdir}" install
+  rm -rf "${pkgdir}"/opt/qt/{phrasebooks,templates,translations}
+  sed -i "s|-L${srcdir}/$pkgfqn/lib ||g" "${pkgdir}"/opt/qt/lib/*.prl
+  install -D -m755 qmake/qmake "${pkgdir}"/opt/qt/bin/qmake
+  install -D -m755 "${srcdir}"/qt.profile "${pkgdir}"/etc/profile.d/qt3.sh
+  ln -sf /opt/qt/bin/qtconfig "${pkgdir}"/opt/qt/bin/qt3config 
+  rm -f "${pkgdir}"/opt/qt/mkspecs/linux-g++$ARCH/linux-g++$ARCH
 
   # install man pages
-  install -d -m755 ${pkgdir}/opt/qt/man
-  cp -r ${srcdir}/$pkgfqn/doc/man/{man1,man3} ${pkgdir}/opt/qt/man/
+  install -d -m755 "${pkgdir}"/opt/qt/man
+  cp -r "${srcdir}"/$pkgfqn/doc/man/{man1,man3} "${pkgdir}"/opt/qt/man/
 
-  install -d -m755 ${pkgdir}/etc/ld.so.conf.d/
-  echo '/opt/qt/lib' > ${pkgdir}/etc/ld.so.conf.d/qt3.conf
+  install -d -m755 "${pkgdir}"/etc/ld.so.conf.d/
+  echo '/opt/qt/lib' > "${pkgdir}"/etc/ld.so.conf.d/qt3.conf
 }
