upgpkg: terminal 0.4.7-2 Add upstream patch for Xfce bug #7595.
git-svn-id: file:///srv/repos/svn-packages/svn@123709 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/terminal/trunk/PKGBUILD
+++ b/terminal/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=terminal
 pkgver=0.4.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A modern terminal emulator primarly for the Xfce desktop environment"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -16,11 +16,18 @@ depends=('exo>=0.5.4' "vte" 'dbus-glib'
 makedepends=('pkgconfig' 'intltool')
 options=('!libtool')
 install=terminal.install
-source=(http://archive.xfce.org/src/apps/${pkgname}/0.4/Terminal-${pkgver}.tar.bz2)
-md5sums=('34daa0090e1bc9014a5b9849103a129f')
+source=(http://archive.xfce.org/src/apps/${pkgname}/0.4/Terminal-${pkgver}.tar.bz2
+        bug-7595-go-menu-single-tab-sensitivity.patch::http://git.xfce.org/apps/terminal/patch/?id=be9fca9ea8cedcf879c8e0c8cea96dd256a3591c)
+md5sums=('34daa0090e1bc9014a5b9849103a129f'
+         '043774c11e2f8c1c424510847dc82fae')
 
 build() {
   cd ${srcdir}/Terminal-${pkgver}
+
+  # Add upstream patch for Xfce bug #7595
+  # (Only make go menu action sensitive if tabs)
+  patch -Np1 -i ${srcdir}/bug-7595-go-menu-single-tab-sensitivity.patch
+
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib/xfce4 \
