--- a/terminal/trunk/PKGBUILD
+++ b/terminal/trunk/PKGBUILD
@@ -17,7 +17,7 @@ makedepends=('pkgconfig' 'intltool')
 options=('!libtool')
 install=terminal.install
 source=(http://archive.xfce.org/src/apps/${pkgname}/0.4/Terminal-${pkgver}.tar.bz2
-        bug-7595-go-menu-single-tab-sensitivity.patch::http://git.xfce.org/apps/terminal/patch/?id=be9fca9ea8cedcf879c8e0c8cea96dd256a3591c)
+        bug-7595-go-menu-single-tab-sensitivity.patch)
 md5sums=('34daa0090e1bc9014a5b9849103a129f'
          '043774c11e2f8c1c424510847dc82fae')
 
