--- a/cd-discid/trunk/PKGBUILD
+++ b/cd-discid/trunk/PKGBUILD
@@ -1,20 +1,25 @@
 # $Id$
-# Maintainer: dorphell <dorphell@archlinux.org>
+# Maintainer:
+# Contributor: dorphell <dorphell@archlinux.org>
 # Contributor: Jochem Kossen <j.kossen@home.nl>
 
 pkgname=cd-discid
 pkgver=0.9
-pkgrel=2
-pkgdesc="cd-discid is a backend utility to get CDDB discid information from a CD-ROM disc."
-arch=(i686 x86_64)
+pkgrel=3
+pkgdesc="A backend utility to get CDDB discid information from a CD-ROM disc"
+arch=('i686' 'x86_64')
 url="http://lly.org/~rcw/cd-discid/"
 license=('GPL')
 depends=('glibc')
-source=(http://lly.org/~rcw/$pkgname/$pkgname\_$pkgver.orig.tar.gz)
+source=("http://lly.org/~rcw/$pkgname/${pkgname}_${pkgver}.orig.tar.gz")
 md5sums=('64677b8b63d1db0db015043f5455171a')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  make || return 1
-  make DESTDIR=$pkgdir INSTALL=/bin/install install || return 1
+  cd "${srcdir}"/$pkgname-$pkgver
+  make
+}
+
+package() {
+  cd "${srcdir}"/$pkgname-$pkgver
+  make DESTDIR="${pkgdir}" INSTALL=/bin/install install
 }
