--- a/lzo/trunk/PKGBUILD
+++ b/lzo/trunk/PKGBUILD
@@ -1,33 +1,35 @@
 # $Id$
+# Maintainer:
 # Contributor: Low Kian Seong <fastmail_low@speedymail.org>
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+# Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=lzo
 pkgver=1.08
-pkgrel=5
-pkgdesc='LZO is a portable lossless data compression library written in ANSI C'
+pkgrel=6
+pkgdesc='A portable lossless data compression library written in ANSI C'
 arch=('i686' 'x86_64')
 license=('GPL')
 url='http://www.oberhumer.com/opensource/lzo'
 depends=('glibc')
 makedepends=('nasm')
 options=('!libtool')
-source=(http://www.oberhumer.com/opensource/${pkgname}/download/${pkgname}-${pkgver}.tar.gz
-	nasm-gcc3.patch)
-md5sums=('ab94d3da364c7cbd5b78d76f1875b0f6' '43fb13762383b572d22152f8815ea4a5')
+source=("http://www.oberhumer.com/opensource/lzo/download/LZO-v1/${pkgname}-${pkgver}.tar.gz"
+        'nasm-gcc3.patch')
+md5sums=('ab94d3da364c7cbd5b78d76f1875b0f6'
+         '43fb13762383b572d22152f8815ea4a5')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
+	cd "${srcdir}"/${pkgname}-${pkgver}
 
-	patch -Np0 -i  ${srcdir}/nasm-gcc3.patch || return 1
-	autoconf || return 1
-	./configure --prefix=/usr --enable-shared || return 1
-	make || return 1
+	patch -p0 -i "${srcdir}"/nasm-gcc3.patch
+	autoconf
+	./configure --prefix=/usr --enable-shared
+	make
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
+	cd "${srcdir}"/${pkgname}-${pkgver}
 
-	make DESTDIR=${pkgdir} install || return 1
+	make DESTDIR="${pkgdir}" install
 }
