--- a/qca-gnupg/trunk/PKGBUILD
+++ b/qca-gnupg/trunk/PKGBUILD
@@ -1,10 +1,11 @@
-# $Id: $
-# Maintainer: Pierre Schmitz <pierre@archlinux.de>
+# $Id$
+# Maintainer:
+# Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=qca-gnupg
 pkgver=2.0.0
 _pkgver=2.0.0-beta3
-pkgrel=1
+pkgrel=2
 pkgdesc="Qt Cryptographic Architecture"
 arch=('i686' 'x86_64')
 url="http://delta.affinix.com/qca/"
@@ -15,10 +16,14 @@ source=("http://delta.affinix.com/download/qca/2.0/plugins/${pkgname}-${_pkgver}
 md5sums=('9b4d020efd835a52d98b2ced9ae79c4b')
 
 build() {
-	cd $srcdir/${pkgname}-${_pkgver}
+	cd "${srcdir}"/${pkgname}-${_pkgver}
 	./configure \
 		--release \
 		--no-separate-debug-info
-	make || return 1
-	make INSTALL_ROOT=$pkgdir install
+	make
+}
+
+package() {
+	cd "${srcdir}"/${pkgname}-${_pkgver}
+	make INSTALL_ROOT="${pkgdir}" install
 }
