--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=lvm2
 pkgname=('lvm2' 'device-mapper')
-pkgver=2.02.84
+pkgver=2.02.85
 _pkgverlvm=${pkgver}
 pkgrel=1
 arch=('i686' 'x86_64')
@@ -14,15 +14,21 @@ groups=('base')
 conflicts=('mkinitcpio<0.5.99')
 source=(ftp://sources.redhat.com/pub/lvm2/LVM2.${_pkgverlvm}.tgz
         lvm2_install
-        lvm2_hook)
-md5sums=('8b4e0897ee48f02c0dff11940e44e23b' 'e29bc80d636ed17b617d9b384a5f3aa0'\
-         '7103e3fef1180478811ac4e32aec540d')
-sha1sums=('6d92f4474f93c7d3824a0eb3469c7e4f9ef8f1d4' '662fc54ce291fd79bd09701e4c3e10854f325282'\
-         '769767d84c73674cbb68c765460e57c428c314a0')
+        lvm2_hook
+        Be-quiet-on-removing-cache-on-read-only-fs.diff)
+md5sums=('91785ca438e5ce679dd3a386b183d552'
+         'e29bc80d636ed17b617d9b384a5f3aa0'
+         'cf05f2c7281e24269ea9dcc6b4e106ba'
+         '6db89da27928d2415a8e26cd0a842712')
+sha1sums=('43ba2a3be84b2e897ae6b47b0b0be7e212216be7'
+          '662fc54ce291fd79bd09701e4c3e10854f325282'
+          '1cd20e8fbad6fd7d5c0f54e831fbf58ae564b440'
+          '6d7dd04be291d7537235704c816a701fd5beacc0')
 
 build() {
   cd "${srcdir}/LVM2.${_pkgverlvm}"
   sed -i 's|/usr/bin/tr|/bin/tr|' scripts/lvmdump.sh
+  patch -p1 -i ../Be-quiet-on-removing-cache-on-read-only-fs.diff
   unset LDFLAGS
   ./configure --prefix= --sysconfdir=/etc --localstatedir=/var --datarootdir=/usr/share \
     --includedir=/usr/include --with-usrlibdir=/usr/lib \
