--- a/webkit-sharp/trunk/PKGBUILD
+++ b/webkit-sharp/trunk/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=webkit-sharp
 pkgver=0.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Mono/.NET bindings for the WebKit rendering engine"
 arch=('i686' 'x86_64')
 url="http://www.mono-project.com/"
 license=('custom:MIT')
-depends=('gtk-sharp-2' 'libwebkit')
+depends=('gtk-sharp-2' 'libwebkit>=1.4.0')
 makedepends=('pkgconfig>=0.9.0')
-source=(http://ftp.novell.com/pub/mono/sources/$pkgname/${pkgname}-${pkgver}.tar.bz2)
+source=(ftp://ftp.novell.com/pub/mono/sources/$pkgname/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('21482f9d5eafb0ef4acc6e790482f934')
 
 build() {
@@ -20,9 +20,15 @@ build() {
   mkdir -p "${MONO_SHARED_DIR}"
 
   cd "${srcdir}/${pkgname}-${pkgver}"
-  sed -i 's/\.1/.2/' sources/webkit-sharp.dll.config.in
-  ./configure --prefix=/usr || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
-  install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
+  sed -i 's:webkit-1.0@LIB_PREFIX@.2@:libwebkitgtk-1.0@LIB_PREFIX@.0.7.0@:' sources/webkit-sharp.dll.config.in
+  ./configure --prefix=/usr
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  
+  make DESTDIR=${pkgdir} install
+  install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING
+
 }
