--- a/wvdial/trunk/PKGBUILD
+++ b/wvdial/trunk/PKGBUILD
@@ -1,24 +1,30 @@
 # $Id$
-# Maintainer: Andrea Scarpino <andrea@archlinux.org>
+# Maintainer:
+# Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: dorphell <dorphell@archlinux.org>
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=wvdial
 pkgver=1.61
-pkgrel=2
+pkgrel=3
 pkgdesc="A dialer program to connect to the Internet"
 url="http://alumnit.ca/wiki/index.php?page=WvDial"
 arch=('i686' 'x86_64')
 license=('custom')
-depends=('wvstreams>=4.6.1' 'ppp')
-source=(http://wvstreams.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
+depends=('wvstreams' 'ppp' 'gcc-libs')
+makedepends=('lockdev')
+options=('!makeflags' '!buildflags')
+source=("http://wvstreams.googlecode.com/files/${pkgname}-${pkgver}.tar.gz")
 md5sums=('acd3b2050c9b65fff2aecda6576ee7bc')
 
 build() {
-  unset LDFLAGS
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}"/${pkgname}-${pkgver}
   ./configure
-  make || return 1
-  make prefix=${pkgdir}/usr PPPDIR=${pkgdir}/etc/ppp/peers install || return 1
-  install -Dm644 COPYING.LIB ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  make LOCKDEV="-llockdev"
+}
+
+package() {
+  cd "${srcdir}"/${pkgname}-${pkgver}
+  make prefix="${pkgdir}"/usr PPPDIR="${pkgdir}"/etc/ppp/peers install
+  install -Dm644 COPYING.LIB "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 }
