--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=postfix
 pkgver=2.8.3
-pkgrel=1
+pkgrel=2
 pkgdesc='Secure, fast, easy to administer drop in replacement for Sendmail (MTA)'
 url='http://www.postfix.org/'
 arch=('i686' 'x86_64')
@@ -28,23 +28,23 @@ install=install
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
 	
-	make makefiles CCARGS=' \
-		-DUSE_SASL_AUTH -I/usr/include/sasl \
-		-DUSE_CYRUS_SASL \
+	make makefiles DEBUG='' CCARGS=' \
+		-DUSE_SASL_AUTH -DUSE_CYRUS_SASL -I/usr/include/sasl \
 		-DHAS_LDAP \
 		-DUSE_TLS \
 		-DHAS_MYSQL -I/usr/include/mysql \
 		-DHAS_PGSQL -I/usr/include/postgresql \
 		-DHAS_SQLITE \
 	' AUXLIBS=' \
-		-lsasl2 -lssl -lcrypto \
+		-lsasl2 \
 		-lldap -llber \
+		-lssl -lcrypto \
 		-lmysqlclient -lz -lm \
 		-lpq \
 		-lsqlite3 -lpthread \
-	'
+	' OPT="${CFLAGS} ${LDFLAGS}"
 
-	make OPT="${CFLAGS}"
+	make
 }
 
 package() {
