upgpkg: gnome-shell-extensions 3.0.1-0.20110513 Bump with new source
git-svn-id: file:///srv/repos/svn-packages/svn@123816 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-shell-extensions/trunk/PKGBUILD
+++ b/gnome-shell-extensions/trunk/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgbase=gnome-shell-extensions
 pkgver=3.0.1
-_date=20110509
+_date=20110513
 pkgrel=0.$_date
 arch=(any)
 url="http://live.gnome.org/GnomeShell/Extensions"
 license=(GPL2)
 makedepends=(gnome-shell intltool)
 source=(ftp://ftp.archlinux.org/other/$pkgbase/$pkgbase-$pkgver-$_date.tar.xz)
-sha256sums=('6bc47925314f89072c99f86ecbfae781905b9fde63165a03939a5620609302f3')
+sha256sums=('d4a7a3344bc0043abcf249bcbd7f7816e46d8462e5553344f3965305f063983d')
 
 pkgname=(gnome-shell-extensions-common
          gnome-shell-extension-alternate-tab
@@ -20,12 +20,16 @@ pkgname=(gnome-shell-extensions-common
          gnome-shell-extension-user-theme
          gnome-shell-extension-drive-menu
          gnome-shell-extension-alternative-status-menu
-         gnome-shell-extension-places-menu)
+         gnome-shell-extension-places-menu
+         gnome-shell-extension-native-window-placement)
+         # Doesn't seem to do work at the moment
+         #gnome-shell-extension-system-monitor)
 
 build() {
   _extensions=(alternate-tab windowsNavigator dock
                auto-move-windows user-theme drive-menu
-               alternative-status-menu places-menu)
+               alternative-status-menu places-menu
+               native-window-placement) # systemMonitor)
 
   cd "$srcdir/$pkgbase-$pkgver"
   ./configure --prefix=/usr \
@@ -105,5 +109,21 @@ package_gnome-shell-extension-places-menu() {
   depends=(gnome-shell-extensions-common)
 
   cd "$srcdir/$pkgbase-$pkgver/extensions/places-menu"
+  make DESTDIR="$pkgdir" install
+}
+
+package_gnome-shell-extension-native-window-placement() {
+  pkgdesc="Native Window Placement extension for GNOME Shell"
+  depends=(gnome-shell-extensions-common)
+
+  cd "$srcdir/$pkgbase-$pkgver/extensions/native-window-placement"
+  make DESTDIR="$pkgdir" install
+}
+
+package_gnome-shell-extension-system-monitor() {
+  pkgdesc="System Monitor extension for GNOME Shell"
+  depends=(gnome-shell-extensions-common)
+
+  cd "$srcdir/$pkgbase-$pkgver/extensions/systemMonitor"
   make DESTDIR="$pkgdir" install
 }
