--- a/linux-firmware/trunk/PKGBUILD
+++ b/linux-firmware/trunk/PKGBUILD
@@ -9,7 +9,7 @@
 
 pkgname=linux-firmware
 pkgver=20110512
-pkgrel=1
+pkgrel=2
 pkgdesc="Firmware files for Linux"
 arch=('any')
 url="http://git.kernel.org/?p=linux/kernel/git/dwmw2/linux-firmware.git;a=summary"
@@ -43,6 +43,7 @@ source=(ftp://ftp.archlinux.org/other/linux-firmware/$pkgname-$pkgver.tar.xz
         http://www.kernel.org/pub/linux/kernel/people/mcgrof/firmware/ar9170/ar9170.fw
         http://intellinuxwireless.org/iwlwifi/downloads/iwlwifi-5000-ucode-8.83.5.1-1.tgz
         http://intellinuxwireless.org/iwlwifi/downloads/iwlwifi-1000-ucode-39.31.5.1.tgz
+        http://intellinuxwireless.org/iwlwifi/downloads/iwlwifi-6000-ucode-9.221.4.1.tgz
         http://intellinuxwireless.org/iwlwifi/downloads/iwlwifi-6000g2a-ucode-17.168.5.2.tgz
         http://intellinuxwireless.org/iwlwifi/downloads/iwlwifi-6000g2b-ucode-17.168.5.2.tgz
 )
@@ -50,6 +51,7 @@ md5sums=('af5fef154866a2e2d33d8b86b271babf'
          '34feec4ec0eae3bb92c7c1ea2dfb4530'
          'cec71b615f3ca6d7823c032da0be1b61'
          '8098503cb2abcdeffffb3ddd2d8d6f60'
+         'c132a4c1946a9dbc0c36b41696e5c793'
          '0b9579f4b8faf51c955295607a8e79a8'
          'd87411296b4eeda0c91322228e9f8437')
 
@@ -71,6 +73,7 @@ package() {
   # fix intel firmware files
   install -m 644 ${srcdir}/iwlwifi-1000-ucode-39.31.5.1/iwlwifi-1000-5.ucode "${pkgdir}/lib/firmware/"
   install -m 644 ${srcdir}/iwlwifi-5000-ucode-8.83.5.1/iwlwifi-5000-5.ucode "${pkgdir}/lib/firmware/"
+  install -m 644 ${srcdir}/iwlwifi-6000-ucode-9.221.4.1/iwlwifi-6000-4.ucode "${pkgdir}/lib/firmware/"
   install -m 644 ${srcdir}/iwlwifi-6000g2a-ucode-17.168.5.2/iwlwifi-6000g2a-5.ucode "${pkgdir}/lib/firmware/"
   install -m 644 ${srcdir}/iwlwifi-6000g2b-ucode-17.168.5.2/iwlwifi-6000g2b-5.ucode "${pkgdir}/lib/firmware/"
 }
