--- a/kdepim-runtime/kde-unstable/PKGBUILD
+++ b/kdepim-runtime/kde-unstable/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdepim-runtime
-pkgver=4.5.95
+pkgver=4.5.96
 pkgrel=1
 pkgdesc='KDE PIM Runtime Environment'
 arch=('i686' 'x86_64')
@@ -15,12 +15,12 @@ install=${pkgname}.install
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 source=("http://download.kde.org/unstable/kdepim/${pkgver}/${pkgname}-${pkgver}.tar.bz2"
         'disable-l10n.patch')
-sha1sums=('0607224f725ee161d16d41a44bd02bacb8245434'
+sha1sums=('fd1cf58d5b62c647a7920dfc1d79126843750b1e'
           '991d81435205185dcb2285a6e728f7756ae92b0d')
 
 build() {
 	cd "${srcdir}"/${pkgname}-${pkgver}
-    patch -Np0 -i ${srcdir}/disable-l10n.patch
+    patch -Np0 -i "${srcdir}"/disable-l10n.patch
 
     cd "${srcdir}"
 	mkdir build
@@ -33,6 +33,6 @@ build() {
 }
 
 package() {
-	cd $srcdir/build
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build
+	make DESTDIR="${pkgdir}" install
 }
