--- a/kdepim/kde-unstable/PKGBUILD
+++ b/kdepim/kde-unstable/PKGBUILD
@@ -20,7 +20,7 @@ pkgname=('kdepim-akonadiconsole'
          'kdepim-ktimetracker'
          'kdepim-libkdepim'
          'kdepim-wizards')
-pkgver=4.5.95
+pkgver=4.5.96
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://pim.kde.org'
@@ -31,7 +31,7 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdepim-runtime' 'libxss'
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 source=("http://download.kde.org/unstable/${pkgbase}/${pkgver}/${pkgbase}-${pkgver}.tar.bz2"
         'disable-l10n.patch')
-sha1sums=('5227ac466247f043643bb9eaa7568e8b936edafe'
+sha1sums=('f425f143fe3381be2bb018bab92d89fd112595f0'
           '25e36f160ced051268e59fad6ed2de33a9c7657a')
 
 build() {
@@ -52,10 +52,10 @@ build() {
 package_kdepim-akonadiconsole() {
 	pkgdesc='Akonadi Management and Debugging Console'
 	depends=('kdepim-libkdepim')
-    url='http://pim.kde.org'
+	url='http://pim.kde.org'
 	install='kdepim.install'
-	cd $srcdir/build/akonadiconsole
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/akonadiconsole
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-akregator() {
@@ -63,12 +63,12 @@ package_kdepim-akregator() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/internet/akregator/"
 	install='kdepim.install'
-	cd $srcdir/build/akregator
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/akregator
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/akregator
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/akregator
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/akregator
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/akregator
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-blogilo() {
@@ -78,19 +78,19 @@ package_kdepim-blogilo() {
 	replaces=('blogilo')
 	conflicts=('blogilo')
 	install='kdepim.install'
-	cd $srcdir/build/blogilo
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/blogilo
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/blogilo
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/blogilo
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-console() {
 	pkgdesc='Command line tool for accessing calendar files'
 	depends=('kdepim-runtime')
-    url='http://pim.kde.org'
+	url='http://pim.kde.org'
 	install='kdepim.install'
-	cd $srcdir/build/console
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/console
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kaddressbook() {
@@ -98,12 +98,12 @@ package_kdepim-kaddressbook() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/office/kaddressbook/"
 	install='kdepim.install'
-	cd $srcdir/build/kaddressbook
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/kaddressbook
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/plugins/kaddressbook
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/kaddressbook
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/kaddressbook
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/plugins/kaddressbook
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kalarm() {
@@ -111,10 +111,10 @@ package_kdepim-kalarm() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/utilities/kalarm/"
 	install='kdepim.install'
-	cd $srcdir/build/kalarm
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kalarm
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/kalarm
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/kalarm
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kjots() {
@@ -122,22 +122,22 @@ package_kdepim-kjots() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/utilities/kjots/"
 	install='kdepim.install'
-	cd $srcdir/build/kjots
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kjots
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/kjots
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/kjots
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/kjots
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/kjots
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kleopatra() {
 	pkgdesc='Certificate Manager and Unified Crypto GUI'
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/utilities/kleopatra/"
-	cd $srcdir/build/kleopatra
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kleopatra
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/kleopatra
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/kleopatra
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kmail() {
@@ -149,11 +149,11 @@ package_kdepim-kmail() {
 	           'kdepim-mimelib' 'kdepim-plugins')
 	replaces=('kdepim-kmailcvt' 'kdepim-ksendemail' 'kdepim-libksieve'
 	          'kdepim-mimelib' 'kdepim-plugins')
-    optdepends=('cyrus-sasl-plugins: CRAM-MD5 authentication')
+	optdepends=('cyrus-sasl-plugins: CRAM-MD5 authentication')
 	for i in kmail doc/kmail kmailcvt ksendemail libksieve mailcommon \
-        nepomuk_email_feeder ontologies templateparser kontact/plugins/kmail; do
-		cd $srcdir/build/${i}
-		make DESTDIR=$pkgdir install
+		nepomuk_email_feeder ontologies templateparser kontact/plugins/kmail; do
+		cd "${srcdir}"/build/${i}
+		make DESTDIR="${pkgdir}" install
 	done
 }
 
@@ -162,12 +162,12 @@ package_kdepim-knode() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/internet/knode/"
 	install='kdepim.install'
-	cd $srcdir/build/knode
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/knode
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/knode
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/knode
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/knode
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/knode
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-knotes() {
@@ -175,12 +175,12 @@ package_kdepim-knotes() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/utilities/knotes/"
 	install='kdepim.install'
-	cd $srcdir/build/knotes
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/knotes
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/knotes
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/knotes
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/knotes
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/knotes
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kontact() {
@@ -192,8 +192,8 @@ package_kdepim-kontact() {
 	replaces=('kdepim-kontactinterfaces')
 	for i in kontact/src doc/kontact \
 		kontact/plugins/summary kontact/plugins/specialdates; do
-		cd $srcdir/build/${i}
-		make DESTDIR=$pkgdir install
+		cd "${srcdir}"/build/${i}
+		make DESTDIR="${pkgdir}" install
 	done
 }
 
@@ -202,20 +202,20 @@ package_kdepim-korganizer() {
 	depends=('kdepim-libkdepim')
 	url="http://kde.org/applications/office/korganizer"
 	install='kdepim.install'
-	cd $srcdir/build/korganizer
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/korganizer
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/korganizer
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/korganizer
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/korganizer
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/korganizer
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-kresources() {
 	pkgdesc='KDE PIM resources'
 	depends=('kdepim-libkdepim')
-    url='http://pim.kde.org'
-	cd $srcdir/build/kresources
-	make DESTDIR=$pkgdir install
+	url='http://pim.kde.org'
+	cd "${srcdir}"/build/kresources
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-ktimetracker() {
@@ -223,36 +223,36 @@ package_kdepim-ktimetracker() {
 	depends=('kdepim-kresources')
 	url="http://kde.org/applications/utilities/ktimetracker/"
 	install='kdepim.install'
-	cd $srcdir/build/ktimetracker
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/ktimetracker
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kontact/plugins/ktimetracker
-	make DESTDIR=$pkgdir install
+	cd "${srcdir}"/build/ktimetracker
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/doc/ktimetracker
+	make DESTDIR="${pkgdir}" install
+	cd "${srcdir}"/build/kontact/plugins/ktimetracker
+	make DESTDIR="${pkgdir}" install
 }
 
 package_kdepim-libkdepim() {
 	pkgdesc='Library for KDE PIM'
 	groups=()
 	depends=('kde-agent' 'kdepim-runtime')
-    url='http://pim.kde.org'
+	url='http://pim.kde.org'
 	conflicts=('kdepim-icons' 'kdepim-libkleo' 'kdepim-libkpgp'
 	            'kdepim-strigi-analyzer' 'kdepim-akonadi')
 	replaces=('kdepim-icons' 'kdepim-libkleo' 'kdepim-libkpgp'
 	          'kdepim-strigi-analyzer' 'kdepim-akonadi')
 	for i in akonadi_next calendarsupport calendarviews incidenceeditor-ng \
 		kdgantt2 libkdepim libkdepimdbusinterfaces libkleo libkpgp \
-        messagecomposer messagecore messagelist messageviewer icons \
-        strigi-analyzer plugins/messageviewer plugins/ktexteditor; do
-		cd $srcdir/build/${i}
-		make DESTDIR=$pkgdir install
+		messagecomposer messagecore messagelist messageviewer icons \
+		strigi-analyzer plugins/messageviewer plugins/ktexteditor; do
+		cd "${srcdir}"/build/${i}
+		make DESTDIR="${pkgdir}" install
 	done
 }
 
 package_kdepim-wizards() {
 	pkgdesc='KDE Groupware Wizard'
 	depends=('kdepim-kresources')
-    url='http://pim.kde.org'
-	cd $srcdir/build/wizards
-	make DESTDIR=$pkgdir install
+	url='http://pim.kde.org'
+	cd "${srcdir}"/build/wizards
+	make DESTDIR="${pkgdir}" install
 }
