upgpkg: xscreensaver 5.13-1 Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@123881 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: Eric Belanger <eric@archlinux.org>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=xscreensaver
-pkgver=5.12
-pkgrel=2
+pkgver=5.13
+pkgrel=1
 pkgdesc="Screen saver and locker for the X Window System"
 arch=('i686' 'x86_64')
 url="http://www.jwz.org/xscreensaver/"
@@ -13,10 +13,14 @@ makedepends=('bc')
 backup=('etc/pam.d/xscreensaver')
 source=(http://www.jwz.org/xscreensaver/${pkgname}-${pkgver}.tar.gz \
         add-electricsheep.diff xscreensaver.pam LICENSE)
-md5sums=('0345c1acb9280729de05c5ca44b401e3' 'f82524626ed8a6832cd279e0548a9b46'\
-         '367a3538f54db71f108b34cfa31088ac' '5e7f3f2a63d20a484742f5b4cb5d572c')
-sha1sums=('7252540b1b1853459a56453714c0974de26fa4c5' '65c2933380267475f2c4560bc22f4350393b00ce'\
-         '106635aa1aae51d6f0668b1853f6c49a4fe9d3d8' '4209ea586b204fd1d81c382a0522c654f9fd9134')
+md5sums=('a1a55b763e17c5c83a2b7cb5ddf23560'
+         'f82524626ed8a6832cd279e0548a9b46'
+         '367a3538f54db71f108b34cfa31088ac'
+         '5e7f3f2a63d20a484742f5b4cb5d572c')
+sha1sums=('3bdac6122e5b7b0cffcc90b3b75dc7fa001c0181'
+          '65c2933380267475f2c4560bc22f4350393b00ce'
+          '106635aa1aae51d6f0668b1853f6c49a4fe9d3d8'
+          '4209ea586b204fd1d81c382a0522c654f9fd9134')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
