upgpkg: gmp 5.0.2-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@123886 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gmp/trunk/PKGBUILD
+++ b/gmp/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gmp
-pkgver=5.0.1
-pkgrel=2
+pkgver=5.0.2
+pkgrel=1
 pkgdesc="A free library for arbitrary precision arithmetic"
 arch=('i686' 'x86_64')
 url="http://gmplib.org/"
@@ -13,7 +13,7 @@ license=('LGPL3')
 options=(!libtool)
 install=gmp.install
 source=(ftp://ftp.gnu.org/gnu/gmp/gmp-${pkgver}.tar.bz2)
-md5sums=('6bac6df75c192a13419dfd71d19240a7')
+md5sums=('0bbaedc82fb30315b06b1588b9077cd3')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -22,6 +22,10 @@ build() {
     --prefix=/usr --infodir=/usr/share/info \
     --enable-cxx
   make
+}
+
+check() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make check
 }
 
