--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=util-linux
 pkgver=2.19.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Miscellaneous system utilities for Linux"
 url="http://userweb.kernel.org/~kzak/util-linux-ng/"
 arch=('i686' 'x86_64')
@@ -15,12 +15,16 @@ conflicts=('linux32' 'util-linux-ng' 'e2fsprogs<1.41.8-2')
 provides=('linux32' "util-linux-ng=${pkgver}")
 license=('GPL2')
 options=('!libtool')
-source=(ftp://ftp.kernel.org/pub/linux/utils/${pkgname}/v2.19/${pkgname}-${pkgver}.tar.bz2)
+source=(ftp://ftp.kernel.org/pub/linux/utils/${pkgname}/v2.19/${pkgname}-${pkgver}.tar.bz2
+       mount-segfault-2.19.1.patch)
 optdepends=('perl: for chkdupexe support')
-md5sums=('3eab06f05163dfa65479c44e5231932c')
+md5sums=('3eab06f05163dfa65479c44e5231932c'
+         '3247b52f0e4b8044f23f2f7218e2fdea')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  # fix https://bugs.archlinux.org/task/24261
+  patch -Np1 -i ../mount-segfault-2.19.1.patch
   # hardware clock
   sed -e 's%etc/adjtime%var/lib/hwclock/adjtime%' -i hwclock/hwclock.c
   ./configure --enable-arch --enable-write --enable-raw --disable-wall --enable-partx
