--- a/microcode_ctl/trunk/PKGBUILD
+++ b/microcode_ctl/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=microcode_ctl
 # Version of the update tool
 _toolver=1.17
 # Version of the microcode image
-_microcodever=20101123
+_microcodever=20110428
 pkgver=${_toolver}.${_microcodever}
 pkgrel=1
 pkgdesc="A companion to the IA32 microcode kernel driver"
@@ -15,10 +15,10 @@ url="http://www.urbanmyth.org/microcode"
 license=('GPL')
 install=microcode.install
 source=(http://www.urbanmyth.org/microcode/$pkgname-${_toolver}.tar.gz
-        http://downloadmirror.intel.com/19611/eng/microcode-${_microcodever}.tgz
+        http://downloadmirror.intel.com/20050/eng/microcode-${_microcodever}.tgz
         microcode)
 md5sums=('98a7f06acef8459c8ef2a1b0fb86a99e'
-         'e19dd592d3357cd47e4d360ce43f4032'
+         '75b7d880f3a4b0161445a0dbdfe9c238'
          '483c198659b8d716bdfbf05a57182394')
 
 build() {
@@ -35,5 +35,5 @@ package() {
        RCFILEFINAL=microcode \
        MANDIR=/usr/share/man/man8 \
        install
-  install -D -m644 ../microcode-${_microcodever}.dat "$pkgdir"/etc/microcode.dat
+  install -D -m644 ../microcode.dat "$pkgdir"/etc/microcode.dat
 }
