attr, acl: sync up PKGBUILDs, upstream updates
git-svn-id: file:///srv/repos/svn-packages/svn@123916 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/acl/trunk/PKGBUILD
+++ b/acl/trunk/PKGBUILD
@@ -1,22 +1,22 @@
 # $Id$
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=acl
-pkgver=2.2.49
-pkgrel=2
+pkgver=2.2.51
+pkgrel=1
 pkgdesc="Access control list utilities, libraries and headers"
 arch=('i686' 'x86_64')
 url="http://savannah.nongnu.org/projects/acl"
 license=('LGPL')
-depends=('attr>=2.4.41')
+depends=('attr>=2.4.46')
 replaces=('xfsacl')
 provides=('xfsacl')
 conflicts=('xfsacl')
 options=('!libtool')
-source=(http://mirrors.zerg.biz/nongnu/${pkgname}/${pkgname}-${pkgver}.src.tar.gz)
-sha256sums=('b9c7f4752e4ef4930a62fa5aa0d7efe1cba2b5a3a2d6ee2b45c0a70c72b7e5d5')
+source=(http://download.savannah.gnu.org/releases/${pkgname}/${pkgname}-${pkgver}.src.tar.gz)
+sha256sums=('06854521cf5d396801af7e54b9636680edf8064355e51c07657ec7442a185225')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${srcdir}"/${pkgname}-${pkgver}
 
   export INSTALL_USER=root INSTALL_GROUP=root 
   ./configure --prefix=/usr --libdir=/lib --libexecdir=/usr/lib
@@ -28,6 +28,7 @@ package() {
 
   make DIST_ROOT="${pkgdir}" install install-lib install-dev
 
-  rm ${pkgdir}/lib/libacl.a
+  # tidy up
+  rm -f ${pkgdir}/lib/libacl.a
   chmod 0755 ${pkgdir}/lib/libacl.so.*.*.*
 }
