--- a/bind/trunk/PKGBUILD
+++ b/bind/trunk/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=bind
 # Use a period and not a hyphen before the patch level for proper versioning.
 pkgver=9.8.0.P1
 _pkgver=9.8.0-P1
-pkgrel=1
+pkgrel=2
 
 pkgdesc='Berkeley Internet Name Daemon (BIND) is the reference implementation of the Domain Name System (DNS) protocols'
 arch=('i686' 'x86_64')
@@ -19,7 +19,7 @@ backup=('etc/logrotate.d/named'
         'etc/conf.d/named'
         'etc/named.conf'
         'etc/rndc.key')
-depends=('openssl' 'libxml2')
+depends=('openssl' 'krb5' 'libxml2')
 options=('!makeflags' '!libtool')
 source=("http://ftp.isc.org/isc/bind9/${_pkgver}/${pkgname}-${_pkgver}.tar.gz"
         'ftp://ftp.rs.internic.net/domain/db.cache'
@@ -51,9 +51,17 @@ build() {
 	patch -p1 -i "${srcdir}"/notools.patch
 
 	./configure \
-		--prefix=/usr --sysconfdir=/etc --localstatedir=/var \
-		--with-libtool --enable-static=no --disable-linux-caps \
-		--with-openssl=yes --with-libxml2=yes
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--localstatedir=/var \
+		--disable-static \
+		--disable-linux-caps \
+		--with-openssl \
+		--with-gssapi \
+		--with-libxml2 \
+		--with-libtool \
+		--with-dlz-dlopen \
+
 	make
 }
 
