upgpkg: acpid 2.0.9-2 reintroduce acpid.conf.d; add support for differents adapters names (FS#21767)
git-svn-id: file:///srv/repos/svn-packages/svn@123979 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/acpid/trunk/PKGBUILD
+++ b/acpid/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=acpid
 pkgver=2.0.9
-pkgrel=1
+pkgrel=2
 pkgdesc="A daemon for delivering ACPI power management events with netlink support"
 arch=('i686' 'x86_64')
 url="http://tedfelix.com/linux/acpid-netlink.html"
@@ -15,8 +15,9 @@ depends=('bash')
 source=("http://www.tedfelix.com/linux/$pkgname-$pkgver.tar.gz"
         'acpid'
         'anything'
-        'handler.sh')
-backup=('etc/acpi/handler.sh' 'etc/acpi/events/anything')
+        'handler.sh'
+        'acpid.conf.d')
+backup=('etc/acpi/handler.sh' 'etc/acpi/events/anything' 'etc/conf.d/acpid')
 
 build() {
   cd "${srcdir}"/$pkgname-$pkgver
@@ -30,10 +31,12 @@ package() {
   install -Dm755 "$srcdir/acpid" "$pkgdir/etc/rc.d/acpid"
   install -Dm644 "$srcdir/anything" "$pkgdir/etc/acpi/events/anything"
   install -Dm755 "$srcdir/handler.sh" "$pkgdir/etc/acpi/handler.sh"
+  install -Dm644 "$srcdir/acpid.conf.d" "$pkgdir/etc/conf.d/acpid"
 
   chmod 755 "${pkgdir}"/usr/sbin/acpid
 }
 md5sums=('8b30aa1b31f607161745a4ac7a19699b'
-         '277d6f5199650ac83fd3ad3612f79d2f'
+         '955490c4db5233ec44461db694b873a4'
          '2d37b98d6e74bab815604b8b48c6cfd4'
-         '0e8dd13793b1baa79a745f4034888367')
+         '7b2e4c299af5eb87e1a81c07b6916c97'
+         '929c6d2e91295c22ed9ec6212d7eabef')
