--- a/telepathy-idle/trunk/PKGBUILD
+++ b/telepathy-idle/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Bjorn Lindeijer <bjorn lindeijer nl>
 # Contributor: Samuel Mendes <heka.lok@gmail.com>
 pkgname=telepathy-idle
-pkgver=0.1.9
+pkgver=0.1.10
 pkgrel=1
 pkgdesc="An IRC connection manager for Telepathy"
 arch=('i686' 'x86_64')
@@ -13,15 +13,11 @@ license=('LGPL')
 depends=('telepathy-glib' 'openssl')
 makedepends=('libxslt' 'python2')
 install=telepathy-idle.install
-source=(http://telepathy.freedesktop.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz
-        python27.patch)
-md5sums=('423f2cc0481bdb32facb850eaf586ff2'
-         '03661efde8f768417e224720e1346d7b')
+source=(http://telepathy.freedesktop.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz)
+md5sums=('570a431e3e28ca6ebf3f0c84198f0b9a')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}"
-    patch -Np1 -i "${srcdir}/python27.patch"
-    autoreconf -fi
     ./configure --prefix=/usr \
     	--libexecdir=/usr/lib/telepathy
     make
