upgpkg: weechat 0.3.5-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@124014 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/weechat/trunk/PKGBUILD
+++ b/weechat/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: lucke <lucke at o2 dot pl>
 
 pkgname=weechat
-pkgver=0.3.4
+pkgver=0.3.5
 pkgrel=1
 pkgdesc="Fast, light and extensible IRC client (curses UI)"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ depends=('gnutls')
 makedepends=('cmake' 'pkgconfig' 'perl' 'python2' 'lua' 'tcl' 'ruby' 'aspell')
 optdepends=('perl' 'python2' 'lua' 'tcl' 'ruby' 'aspell')
 options=('!libtool')
-source=(http://www.weechat.org/files/src/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('79207fea567548462fe36397e633d287')
+source=("http://www.weechat.org/files/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('0d2a089bfbfa550e0c65618a171fb3c4')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -23,11 +23,11 @@ build() {
   cd build
   cmake .. -DPREFIX=/usr \
         -DPYTHON_EXECUTABLE=/usr/bin/python2 \
-        -DPYTHON_LIBRARY=/usr/lib/libpython2.7.so || return 1
+        -DPYTHON_LIBRARY=/usr/lib/libpython2.7.so
 }
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}/build"
 
-  make DESTDIR="${pkgdir}/" install || return 1
+  make DESTDIR="${pkgdir}/" install
 }
