upgpkg: gstreamer0.10 0.10.34-1 Update to 0.10.34
git-svn-id: file:///srv/repos/svn-packages/svn@124024 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gstreamer0.10/trunk/PKGBUILD
+++ b/gstreamer0.10/trunk/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gstreamer0.10
-pkgver=0.10.32
+pkgver=0.10.34
 pkgrel=1
 pkgdesc="GStreamer Multimedia Framework"
 arch=('i686' 'x86_64')
 license=('LGPL')
 url="http://gstreamer.freedesktop.org/"
-depends=('libxml2>=2.7.8' 'glib2>=2.24.1')
-optdepends=('sh:	for feedback script')
+depends=('libxml2' 'glib2')
+optdepends=('sh: feedback script')
 makedepends=('intltool' 'pkgconfig' 'gtk-doc' 'gobject-introspection')
 options=('!libtool')
 source=(${url}/src/gstreamer/gstreamer-${pkgver}.tar.bz2)
-md5sums=('442bc3d37b8511a73379143e7531d726')
+sha256sums=('85348f70dc4b70ad1beb05c9a59a64175c5058f4ee5273f89230a3c1d11b26a3')
 
 build() {
   cd "${srcdir}/gstreamer-${pkgver}"
