upgpkg: grep 2.8-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@124062 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grep/trunk/PKGBUILD
+++ b/grep/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=grep
-pkgver=2.7
+pkgver=2.8
 pkgrel=1
 pkgdesc="A string search utility"
 arch=('i686' 'x86_64')
@@ -14,12 +14,16 @@ depends=('glibc' 'pcre' 'sh')
 makedepends=('texinfo')
 install=${pkgname}.install
 source=(ftp://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.xz)
-md5sums=('6dd9931a52501519d7779a27cf953326')
+md5sums=('b59003c42b330bdabd417e00d07102da')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr --bindir=/bin --without-included-regex
   make
+}
+
+check() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make check
 }
 
