upgpkg: bison 2.5-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@124065 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/bison/trunk/PKGBUILD
+++ b/bison/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Eric Belanger <eric@archlinux.org>
 
 pkgname=bison
-pkgver=2.4.3
+pkgver=2.5
 pkgrel=1
 pkgdesc="The GNU general-purpose parser generator"
 arch=('i686' 'x86_64')
@@ -13,12 +13,16 @@ depends=('glibc' 'm4' 'sh')
 groups=('base-devel')
 install=bison.install
 source=(ftp://ftp.gnu.org/gnu/bison/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('c1d3ea81bc370dbd43b6f0b2cd21287e')
+md5sums=('9dba20116b13fc61a0846b0058fbe004')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --datadir=/usr/share
   make
+}
+
+check() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make check
 }
 
