upgpkg: fam 2.7.0-15 do not hardcode the path to rpcbind status file (fixes FS#24070)
git-svn-id: file:///srv/repos/svn-packages/svn@124073 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/fam/trunk/PKGBUILD
+++ b/fam/trunk/PKGBUILD
@@ -1,16 +1,17 @@
 # $Id$
-# Maintainer: Allan McRae <allan@archlinux.org>
+# Maintainer:
+# Contributor: Allan McRae <allan@archlinux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=fam
 pkgver=2.7.0
-pkgrel=14
+pkgrel=15
 pkgdesc="File Alteration Monitor"
 arch=('i686' 'x86_64')
 license=('LGPL' 'GPL')
 depends=('rpcbind' 'gcc-libs' 'bash')
 url="http://oss.sgi.com/projects/fam/"
-backup=(etc/fam/fam.conf)
+backup=('etc/fam/fam.conf')
 options=('!makeflags') # Don't !libtool
 source=(ftp://oss.sgi.com/projects/fam/download/stable/${pkgname}-${pkgver}.tar.gz
 	fam-2.7.0-dnotify.patch
@@ -23,25 +24,29 @@ md5sums=('1bf3ae6c0c58d3201afc97c6a4834e39'
          '47b41e0b0498793af004696a096d7da1'
          '2638b8ffacb9f03b6e438e08ea7b290a'
          'fc0cabc0ac4f819680401eb3090c29c9'
-         '0b4dd9894ccc03f57787f9dfc0a7bd6f')
+         '92a37f9eb6ad0e60ded9c70e9ad93a88')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  patch -Np1 -i ${srcdir}/fam-2.7.0-dnotify.patch || return 1
-  patch -Np1 -i ${srcdir}/fam-2.7.0-largefiles.patch || return 1
-  patch -Np0 -i ${srcdir}/fam-2.7.0-limits.patch || return 1
-  patch -Np1 -i ${srcdir}/fam-2.7.0-buildfixes.patch || return 1
+  cd "${srcdir}"/${pkgname}-${pkgver}
+  patch -p1 -i "${srcdir}"/fam-2.7.0-dnotify.patch
+  patch -p1 -i "${srcdir}"/fam-2.7.0-largefiles.patch
+  patch -p0 -i "${srcdir}"/fam-2.7.0-limits.patch
+  patch -p1 -i "${srcdir}"/fam-2.7.0-buildfixes.patch
 
-  chmod 755 configure || return 1
+  chmod 755 configure
 
-  autoheader || return 1
-  aclocal || return 1
-  automake -a -c || return 1
-  autoconf || return 1
-  libtoolize --copy --force || return 1
+  autoheader
+  aclocal
+  automake -a -c
+  autoconf
+  libtoolize --copy --force
 
   ./configure --prefix=/usr --sysconfdir=/etc/fam
-  make || return 1
-  make DESTDIR=${pkgdir} install
-  install -D -m755 ../fam ${pkgdir}/etc/rc.d/fam
+  make
+}
+
+package() {
+  cd "${srcdir}"/${pkgname}-${pkgver}
+  make DESTDIR="${pkgdir}" install
+  install -D -m755 "${srcdir}"/fam "${pkgdir}"/etc/rc.d/fam
 }
