upgpkg: gptfdisk 0.7.1-2 Adopt package. Add provides/conflicts for gdisk. Include NEWS file.
git-svn-id: file:///srv/repos/svn-packages/svn@124135 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gptfdisk/trunk/PKGBUILD
+++ b/gptfdisk/trunk/PKGBUILD
@@ -1,30 +1,35 @@
 # $Id$
-# Maintainer: Tobias Powalowski <tpowa@archlinux.org
+# Maintainer: Evangelos Foutras <foutrelis@gmail.com>
+# Contributor: Tobias Powalowski <tpowa@archlinux.org>
 # Contributor: Hokum <hokum_at_mail_dot_ru>
+
 pkgname=gptfdisk
 pkgver=0.7.1
-pkgrel=1
-pkgdesc="A text-mode partitioning tool that works on Globally Unique Identifier (GUID) Partition Table (GPT) disks."
+pkgrel=2
+pkgdesc="A text-mode partitioning tool that works on Globally Unique Identifier (GUID) Partition Table (GPT) disks"
 arch=('i686' 'x86_64')
-url="http://www.rodsbooks.com/gdisk"
-depends=('gcc-libs' 'util-linux' 'popt' 'icu')
-replaces=('gdisk')
+url="http://www.rodsbooks.com/gdisk/"
 license=('GPL2')
-source=(http://www.rodsbooks.com/gdisk/$pkgname-$pkgver.tgz)
+depends=('gcc-libs' 'util-linux' 'popt' 'icu')
+provides=('gdisk')
+conflicts=('gdisk')
+replaces=('gdisk')
+source=(http://downloads.sourceforge.net/project/$pkgname/$pkgname/$pkgver/$pkgname-$pkgver.tgz)
+md5sums=('7c8d810df61e81c821bef399b832e89e')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "$srcdir/$pkgname-$pkgver"
+  
   make
 }
 
 package () {
-  cd $srcdir/$pkgname-$pkgver
-  install -D -m755 gdisk $pkgdir/sbin/gdisk
-  install -D -m755 sgdisk $pkgdir/sbin/sgdisk
-  install -D -m755 fixparts $pkgdir/sbin/fixparts
-  install -D -m644 gdisk.8 $pkgdir/usr/share/man/man8/gdisk.8
-  install -D -m644 sgdisk.8 $pkgdir/usr/share/man/man8/sgdisk.8
-  install -D -m644 README $pkgdir/usr/share/gdisk/README
-  install -D -m644 NEWS pkgdir/usr/share/gdisk/NEWS
+  cd "$srcdir/$pkgname-$pkgver"
+  
+  install -d "$pkgdir"/{sbin,usr/share/{man/man8,gdisk}}
+  install -t "$pkgdir/sbin" gdisk sgdisk fixparts
+  install -m644 -t "$pkgdir/usr/share/man/man8" {gdisk,sgdisk}.8
+  install -m644 -t "$pkgdir/usr/share/gdisk" README NEWS
 }
-md5sums=('7c8d810df61e81c821bef399b832e89e')
+
+# vim:set ts=2 sw=2 et:
